--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -216,6 +216,9 @@
     <ClInclude Include="ModelAction\ModelActionManager.h">
       <Filter>Header Files\ModelAction</Filter>
     </ClInclude>
+    <ClInclude Include="UIData\DataWidgets.h">
+      <Filter>Header Files\UIData</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
