--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="Settings\Settings.h" />
     <ClInclude Include="Settings\SettingsManager.h" />
     <ClInclude Include="Settings\SettingsRepository.h" />
+    <ClInclude Include="sqlite\sqlite-amalgamation-3071700\sqlite3.h" />
     <ClInclude Include="Status\StatusManager.h" />
     <ClInclude Include="test.h" />
     <ClInclude Include="Threads\ThreadManager.h" />
@@ -147,6 +148,7 @@
     <ClCompile Include="Settings\Settings.cpp" />
     <ClCompile Include="Settings\SettingsManager.cpp" />
     <ClCompile Include="Settings\SettingsRepository.cpp" />
+    <ClCompile Include="sqlite\sqlite-amalgamation-3071700\sqlite3.c" />
     <ClCompile Include="Status\StatusManager.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="Threads\ThreadManager.cpp" />
