--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -84,6 +84,13 @@
     <ClInclude Include="Model\Model.h" />
     <ClInclude Include="Model\ModelManager.h" />
     <ClInclude Include="Model\OutputModel.h" />
+    <ClInclude Include="Model\Tables\Table.h" />
+    <ClInclude Include="Model\Tables\TableInstances\CMU.h" />
+    <ClInclude Include="Model\Tables\TableInstances\DMU.h" />
+    <ClInclude Include="Model\Tables\TableInstances\UOA.h" />
+    <ClInclude Include="Model\Tables\TableInstances\VariableGroup.h" />
+    <ClInclude Include="Model\Tables\TableManager.h" />
+    <ClInclude Include="Model\Tables\TableTypes.h" />
     <ClInclude Include="Project\Project.h" />
     <ClInclude Include="Project\InputProject.h" />
     <ClInclude Include="Project\ProjectManager.h" />
@@ -128,6 +135,13 @@
     <ClCompile Include="Model\Model.cpp" />
     <ClCompile Include="Model\ModelManager.cpp" />
     <ClCompile Include="Model\OutputModel.cpp" />
+    <ClCompile Include="Model\Tables\Table.cpp" />
+    <ClCompile Include="Model\Tables\TableInstances\CMU.cpp" />
+    <ClCompile Include="Model\Tables\TableInstances\DMU.cpp" />
+    <ClCompile Include="Model\Tables\TableInstances\UOA.cpp" />
+    <ClCompile Include="Model\Tables\TableInstances\VariableGroup.cpp" />
+    <ClCompile Include="Model\Tables\TableManager.cpp" />
+    <ClCompile Include="Model\Tables\TableTypes.cpp" />
     <ClCompile Include="Project\Project.cpp" />
     <ClCompile Include="Project\InputProject.cpp" />
     <ClCompile Include="Project\ProjectManager.cpp" />
