--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -413,5 +413,8 @@
     <ClCompile Include="Utilities\UUID.cpp">
       <Filter>Source Files\Utilities</Filter>
     </ClCompile>
+    <ClCompile Include="UIData\DataWidgets.cpp">
+      <Filter>Source Files\UIData</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
