--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -264,6 +264,12 @@
     <ClInclude Include="Utilities\UUID.h">
       <Filter>Header Files\Utilities</Filter>
     </ClInclude>
+    <ClInclude Include="UIAction\ActionWidgets.h">
+      <Filter>Header Files\UIAction</Filter>
+    </ClInclude>
+    <ClInclude Include="Utilities\WidgetIdentifier.h">
+      <Filter>Header Files\Utilities</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
@@ -415,6 +421,12 @@
     </ClCompile>
     <ClCompile Include="UIData\DataWidgets.cpp">
       <Filter>Source Files\UIData</Filter>
+    </ClCompile>
+    <ClCompile Include="UIAction\ActionWidgets.cpp">
+      <Filter>Source Files\UIAction</Filter>
+    </ClCompile>
+    <ClCompile Include="Utilities\WidgetIdentifier.cpp">
+      <Filter>Source Files\Utilities</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
