En-route to first conversion of action request to action response. Also, en-route to finalizing plan regarding failsafe synchronizing of data in UI with backend given potential future multithreading issues.

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -270,6 +270,12 @@
     <ClInclude Include="Utilities\WidgetIdentifier.h">
       <Filter>Header Files\Utilities</Filter>
     </ClInclude>
+    <ClInclude Include="UIData\DataChanges.h">
+      <Filter>Header Files\UIData</Filter>
+    </ClInclude>
+    <ClInclude Include="UIAction\ActionChanges.h">
+      <Filter>Header Files\UIAction</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="test.cpp">
@@ -427,6 +433,12 @@
     </ClCompile>
     <ClCompile Include="Utilities\WidgetIdentifier.cpp">
       <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
+    <ClCompile Include="UIData\DataChanges.cpp">
+      <Filter>Source Files\UIData</Filter>
+    </ClCompile>
+    <ClCompile Include="UIAction\ActionChanges.cpp">
+      <Filter>Source Files\UIAction</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
