--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -121,8 +121,10 @@
     <ClInclude Include="Threads\WorkerThread.h" />
     <ClInclude Include="Threads\WorkItem.h" />
     <ClInclude Include="Triggers\TriggerManager.h" />
+    <ClInclude Include="UIAction\ActionChanges.h" />
     <ClInclude Include="UIAction\ActionWidgets.h" />
     <ClInclude Include="UIAction\UIActionManager.h" />
+    <ClInclude Include="UIData\DataChanges.h" />
     <ClInclude Include="UIData\DataWidgets.h" />
     <ClInclude Include="UIData\UIDataManager.h" />
     <ClInclude Include="Utilities\NewGeneException.h" />
@@ -175,8 +177,10 @@
     <ClCompile Include="Threads\WorkerThread.cpp" />
     <ClCompile Include="Threads\WorkItem.cpp" />
     <ClCompile Include="Triggers\TriggerManager.cpp" />
+    <ClCompile Include="UIAction\ActionChanges.cpp" />
     <ClCompile Include="UIAction\ActionWidgets.cpp" />
     <ClCompile Include="UIAction\UIActionManager.cpp" />
+    <ClCompile Include="UIData\DataChanges.cpp" />
     <ClCompile Include="UIData\DataWidgets.cpp" />
     <ClCompile Include="UIData\UIDataManager.cpp" />
     <ClCompile Include="Utilities\NewGeneException.cpp" />
