Implemented full cycle of action handling for K-ad spin box.  Untested.

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -464,5 +464,11 @@
     <ClCompile Include="Model\TimeGranularity.cpp">
       <Filter>Source Files\Model</Filter>
     </ClCompile>
+    <ClCompile Include="UIAction\Controllers\Controller_KAdCountChange.cpp">
+      <Filter>Header Files\UIAction\Controllers</Filter>
+    </ClCompile>
+    <ClCompile Include="UIAction\Controllers\Controller_VariableGroupSetMemberSelectionChange.cpp">
+      <Filter>Header Files\UIAction\Controllers</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
