--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -183,6 +183,8 @@
     <ClCompile Include="Triggers\TriggerManager.cpp" />
     <ClCompile Include="UIAction\ActionChanges.cpp" />
     <ClCompile Include="UIAction\ActionWidgets.cpp" />
+    <ClCompile Include="UIAction\Controllers\Controller_KAdCountChange.cpp" />
+    <ClCompile Include="UIAction\Controllers\Controller_VariableGroupSetMemberSelectionChange.cpp" />
     <ClCompile Include="UIAction\UIActionManager.cpp" />
     <ClCompile Include="UIData\DataChanges.cpp" />
     <ClCompile Include="UIData\DataWidgets.cpp" />
