Add new table type to support pairing integers with instance identifiers.  Creat KAdCount output model table, manually populate with CTY and MID Kad count data, implement the new Kad count table class, and implement the table loading function.

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="Model\Tables\Table.h" />
     <ClInclude Include="Model\Tables\TableInstances\CMU.h" />
     <ClInclude Include="Model\Tables\TableInstances\DMU.h" />
+    <ClInclude Include="Model\Tables\TableInstances\KAdCount.h" />
     <ClInclude Include="Model\Tables\TableInstances\UOA.h" />
     <ClInclude Include="Model\Tables\TableInstances\VariableGroup.h" />
     <ClInclude Include="Model\Tables\TableInstances\VariablesSelected.h" />
@@ -147,6 +148,7 @@
     <ClCompile Include="Model\Tables\Table.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\CMU.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\DMU.cpp" />
+    <ClCompile Include="Model\Tables\TableInstances\KAdCount.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\UOA.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\VariableGroup.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\VariablesSelected.cpp" />
