--- a/NewGeneUI/.gitignore
+++ b/NewGeneUI/.gitignore
@@ -4,3 +4,4 @@
 /build-NewGene-VS2012_x86-Release/
 /build-NewGene-Desktop-Debug/
 /build-NewGene-Desktop-Release/
+/build-NewGene-Desktop_Qt_5_1_0_MSVC2012_32bit-Debug/
