Rearrange some function definitions to prevent linker duplicate errors.  The Qt project now builds, linking to the backend project, with a first pass of import support sufficient to import Maoz data fully implemented and building, but currently not run tested.

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Model\Model.cpp" />
     <ClCompile Include="Model\ModelManager.cpp" />
     <ClCompile Include="Model\OutputModel.cpp" />
+    <ClCompile Include="Model\Tables\FieldTypes.cpp" />
     <ClCompile Include="Model\Tables\Import\Import.cpp" />
     <ClCompile Include="Model\Tables\Import\ImportDefinitions.cpp" />
     <ClCompile Include="Model\Tables\Schema.cpp" />
