Further en-route to implementing time range controls in user interface and backend.

--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj.filters
@@ -518,5 +518,8 @@
     <ClCompile Include="UIAction\Controllers\Controller_GenerateOutput.cpp">
       <Filter>Source Files\UIAction\Controllers</Filter>
     </ClCompile>
+    <ClCompile Include="UIAction\Controllers\Controller_TimeRangeChange.cpp">
+      <Filter>Source Files\UIAction\Controllers</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
