--- a/NewGeneBackEnd/NewGeneBackEnd.vcxproj
+++ b/NewGeneBackEnd/NewGeneBackEnd.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="Model\Tables\Table.h" />
     <ClInclude Include="Model\Tables\TableInstances\CMU.h" />
     <ClInclude Include="Model\Tables\TableInstances\DMU.h" />
+    <ClInclude Include="Model\Tables\TableInstances\GeneralOptions.h" />
     <ClInclude Include="Model\Tables\TableInstances\KAdCount.h" />
     <ClInclude Include="Model\Tables\TableInstances\TimeRange.h" />
     <ClInclude Include="Model\Tables\TableInstances\UOA.h" />
@@ -162,6 +163,7 @@
     <ClCompile Include="Model\Tables\Schema.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\CMU.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\DMU.cpp" />
+    <ClCompile Include="Model\Tables\TableInstances\GeneralOptions.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\KAdCount.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\TimeRange.cpp" />
     <ClCompile Include="Model\Tables\TableInstances\UOA.cpp" />
@@ -201,6 +203,7 @@
     <ClCompile Include="Triggers\TriggerManager.cpp" />
     <ClCompile Include="UIAction\ActionChanges.cpp" />
     <ClCompile Include="UIAction\ActionWidgets.cpp" />
+    <ClCompile Include="UIAction\Controllers\Controller_GeneralOptions.cpp" />
     <ClCompile Include="UIAction\Controllers\Controller_GenerateOutput.cpp" />
     <ClCompile Include="UIAction\Controllers\Controller_KAdCountChange.cpp" />
     <ClCompile Include="UIAction\Controllers\Controller_TimeRangeChange.cpp" />
