--- a/NewGeneUI/.gitignore
+++ b/NewGeneUI/.gitignore
@@ -6,3 +6,4 @@
 /build-NewGene-Desktop-Release/
 /build-NewGene-Desktop_Qt_5_1_0_MSVC2012_32bit-Debug/
 /build-NewGene-Desktop_Qt_5_1_1_clang_64bit-Debug/
+/build-NewGene-Desktop_Qt_5_1_1_clang_64bit-Release/
